--- a/angular.json
+++ b/angular.json
@@ -17,20 +17,18 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/font-end",
-            "index": "src/index.html",
+            "outputPath": "dist/font-end", 
             "main": "src/main.ts",
             "polyfills": [
-              "zone.js"
+              "src/polyfills.ts" 
             ],
-            "tsConfig": "tsconfig.app.json",
+            "tsConfig": "tsconfig.app.json",  
             "inlineStyleLanguage": "css",
             "assets": [
               "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
-              
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css",
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
@@ -87,10 +85,10 @@
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
             "polyfills": [
-              "zone.js",
-              "zone.js/testing"
+              "src/polyfills.ts",
+              "src/polyfills.ts" 
             ],
-            "tsConfig": "tsconfig.spec.json",
+            "tsConfig": "tsconfig.spec.json",  
             "inlineStyleLanguage": "css",
             "assets": [
               "src/favicon.ico",
