--- a/angular.json
+++ b/angular.json
@@ -20,9 +20,7 @@
             "outputPath": "dist/font-end", 
             "index": "src/index.html",
             "main": "src/main.ts",
-            "polyfills": [
-              "src/polyfills.ts" 
-            ],
+           "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",  
             "inlineStyleLanguage": "css",
             "assets": [
