--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "@angular/router": "^16.2.0",
     "@popperjs/core": "^2.11.6",
     "@zegocloud/zego-uikit-prebuilt": "^2.6.1",
-    "chart.js": "^4.4.3",
+    "chart.js": "^4.4.4",
     "core-js": "^3.38.1",
     "flowbite": "^2.3.0",
+    "ng2-charts": "^4.0.2",
     "ng2-search-filter": "^0.5.1",
     "ngx-cookie-service": "^16.1.0",
     "ngx-file-upload": "^0.0.1",
