--- a/angular.json
+++ b/angular.json
@@ -17,11 +17,11 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/font-end", 
+            "outputPath": "dist/font-end",
             "index": "src/index.html",
             "main": "src/main.ts",
-           "polyfills": "src/polyfills.ts",
-            "tsConfig": "tsconfig.app.json",  
+            "polyfills": ["src/polyfills.ts"],
+            "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "css",
             "assets": [
               "src/favicon.ico",
@@ -49,7 +49,15 @@
                   "maximumError": "4kb"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "optimization": true,
+              "sourceMap": false,
+              
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true
             },
             "development": {
               "buildOptimizer": false,
@@ -83,11 +91,9 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "polyfills": [
-              "src/polyfills.ts",
-              "src/polyfills.ts" 
-            ],
-            "tsConfig": "tsconfig.spec.json",  
+            "main": "src/test.ts",
+            "polyfills": ["src/polyfills.ts"],
+            "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "css",
             "assets": [
               "src/favicon.ico",
